# gridded-tnp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
data/era5/: hadisd_station_gridded.pt
experiments/: era5_download.py  eval.py  eval_plots.py  generate_gp_data.py  lightning_train.py  mm_era5_download.py  plot.py  plot_era5.py  plot_image.py  plot_mm_era5.py  plot_ootg_era5.py  plot_windspeed_us.py  slurm_eval.py  slurm_lightning_train.py  slurm_plot_ws.py
experiments/configs/data/: era5-nc-files.yml  mm-era5-nc-files.yml
experiments/configs/generators/: gp-ll.yml  gp.yml  mm-era5-eval.yml  mm-era5.yml  ootg-era5-eval.yml  ootg-era5.yml  pregenerate-gp.yml  station-era5.yml
experiments/configs/models/: convcnp.yml  mm-convcnp-xl.yml  mm-convcnp.yml  mm-single-swintnp.yml  mm-swinatetnp.yml  mm-swintetnp.yml  mm-swintnp-xl.yml  mm-swintnp.yml  mm-vittnp-pe.yml  mm-vittnp.yml  ootg-convcnp.yml  ootg-swinatetnp.yml  ootg-swintetnp.yml  ootg-swintnp.yml  ootg-vittnp-pe.yml  ootg-vittnp.yml
experiments/configs/models/cnns/: cnn.yml  unet.yml
experiments/configs/models/gp/: cnp.yml  convcnp.yml  pttnp.yml  swintetnp.yml  swintnp.yml  vitnp-pe.yml  vitnp.yml
experiments/configs/models/grid_decoders/: mhca-gd.yml  setconv-gd.yml  temhca-gd.yml
experiments/configs/models/grid_encoders/: avg-ge.yml  ootg-pt-ge.yml  ootg-pt-te-ge.yml  ootg-setconv-ge.yml  pt-ge-tt.yml  pt-ge.yml  pt-te-ge-tt.yml  pt-te-ge.yml  setconv-ge-tt.yml  setconv-ge.yml
tests/: test_grid_encoder.py  test_mm_config.py  test_nearest_gridded_neighbours.py  test_pt_encoder.py
tnp/: __init__.py
tnp/data/: base.py  gp.py  image.py  pregenerated.py  synthetic.py
tnp/data/cams/: __init__.py  cams.py  mm_cams.py  normalisation.py  ootg_cams.py
tnp/data/era5/: __init__.py  era5.py  mm_era5.py  normalisation.py  ootg_era5.py
tnp/likelihoods/: __init__.py  base.py  gaussian.py
tnp/models/: base.py  cnp.py  convcnp.py  gridded_atetnp.py  gridded_tetnp.py  gridded_tnp.py  gridded_tnp_3d.py  pttnp.py  tnp.py
tnp/networks/: attention.py  attention_layers.py  cnn.py  deepset.py  embeddings.py  grid_decoders.py  mlp.py  modules.py  patch_encoders.py  swin_attention.py  te_grid_decoders.py  teattention.py  teattention_layers.py  transformer.py
tnp/networks/grid_encoders/: __init__.py  average_grid_encoder.py  mm_grid_encoders.py  pt_grid_encoders.py  pt_te_grid_encoders.py  setconv_grid_encoders.py
tnp/utils/: __init__.py  batch.py  data.py  distances.py  dropout.py  experiment_utils.py  grids.py  helpers.py  initialisation.py  lightning_utils.py  receptive_field.py
tnp/utils/spherical_harmonics/: spherical_harmonics_generate_ylms.py  spherical_harmonics_ylm.py
