[tool.isort]
profile = "black"

[tool.pylint]
max-line-length = 120
disable = "C0114, C0115, C0103, C0116, R0903, R0913, R0914, R1729, W0231"

[tool.pylint.TYPECHECK]
generated-members = "numpy.*, torch.*, torch.nn.*, nn.*, torch.nn.functional.*"

[project]
name = "gridded-tnp"
version = "0.0.1"
description = "Gridded transformer neural processes"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
