[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gridded-tnp"
version = "0.0.1"
description = "Gridded transformer neural processes"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["transformer", "neural-processes", "gridded", "deep-learning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core runtime deps (adjust as needed)
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
  "einops>=0.7",
  "tqdm>=4.66",
  "typing_extensions>=4.9",
  "check-shapes>=1.1.1",
  "hydra-core>=1.3.2",
  "HiYaPyCo>=0.7.0",
  "lightning>=2.5.5",
  "wandb>=0.22.2",
  "zarr"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.9",
  "mypy>=1.10",
  "black>=24.8",
  "isort>=5.13",
]

[project.urls]
Homepage = "https://github.com/your-org/gridded-tnp"
Repository = "https://github.com/your-org/gridded-tnp"
Issues = "https://github.com/your-org/gridded-tnp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tnp.*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
tnp = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
exclude = "(build|dist|.venv|docs)/"

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
per-file-ignores = { "tests/*" = ["E402"] }

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true